# cmake

./: .editorconfig  .gitignore
boost/: .gitignore  CMakeLists.txt  dmitigr_boost.cmake
openssl/: .gitignore  CMakeLists.txt  dmitigr_openssl.cmake
sqlite3/: CMakeLists.txt
src/: dmitigr.cmake  dmitigr_libev.cmake  dmitigr_openssl.cmake  dmitigr_sqlite3.cmake
test/boost/: CMakeLists.txt
test/openssl/: CMakeLists.txt
